微信小程序

--- a/app/pages/main/home/home.wxml
+++ b/app/pages/main/home/home.wxml
@@ -3,40 +3,37 @@
   <!-- 搜索模块 -->
   <van-search value="{{ value }}" placeholder="请输入搜索关键词" />
   <!-- 轮播图模块 -->
-  <swiper indicator-dots="true" autoplay="true">
+  <swiper indicator-dots="true" autoplay="true" class="swiper">
     <block wx:for="{{background}}" wx:key="item">
       <swiper-item>
-        <van-image width="100%" height="100%" src="{{item}}" />
+        <van-image width="94%" height="120px" custom-class="swiper-image" radius="8" src="{{item}}" />
       </swiper-item>
     </block>
   </swiper>
-  <!-- 快捷入口模块 -->
-  <van-grid border="{{false}}" square="{{true}}" custom-class="grid-service" column-num="4">
-    <van-grid-item icon="/images/huawei.png" bind:click="sorry" text="华为手机" />
-    <van-grid-item icon="/images/xiaomi.png" bind:click="sorry" text="小米手机" />
-    <van-grid-item icon="/images/apple.png" url="/pages/address/list/list" text="苹果手机" />
-    <van-grid-item icon="/images/meizu.png" url="/pages/collection/collection" text="魅族手机" />
-  </van-grid>
-  <!-- 限时秒杀模块 -->
-  <van-cell custom-class="cell-top-space" title-class="cell-title" title="限时秒杀" />
-  <van-grid column-num="4" border="{{ false }}">
-  <van-grid-item use-slot wx:for="{{ 4 }}" wx:for-item="index">
-    <image
-      style="width: 100%; height: 90px;"
-      src="https://img.yzcdn.cn/vant/apple-{{ index + 1 }}.jpg"
-    />
-    <text class="view-card-price"><text class="price-char">¥ </text>{{288}}</text>
-  </van-grid-item>
-</van-grid>
-  <!-- 精品特卖模块 -->
-  <van-cell custom-class="cell-top-space" title-class="cell-title" title="精品特卖" />
-  <van-grid column-num="2">
-    <van-grid-item use-slot wx:for="{{ product }}" wx:key="{{item.id}}" id="{{item.id}}" bindtap="onClick">
-      <van-image width="8rem" height="8rem" fit="contain" src="{{item.imageUrl}}" />
-      <text class="view-card-title">{{item.name}}</text>
-      <text class="view-card-price"><text class="price-char">¥ </text>{{item.price}}</text>
-    </van-grid-item>
-  </van-grid>
+  <!-- 分区模块 -->
+  <!-- <van-grid content-class="grid" icon-size="55" border="{{false}}">
+    <van-grid-item icon="/images/huore.png" text-class="grid-item-text" text="热卖榜单" />
+    <van-grid-item icon="/images/vegetable.png" text-class="grid-item-text" text="新鲜蔬菜" />
+    <van-grid-item icon="/images/vip.png" text-class="grid-item-text" text="会员专区" />
+    <van-grid-item icon="/images/exchange.png" text-class="grid-item-text" text="积分兑换" />
+  </van-grid> -->
+  <!-- 商品模块 -->
+    <van-card 
+    wx:for="{{ product }}" 
+  wx:key="{{item.id}}"
+  desc="{{item.description}}"
+  title="{{item.title}}" 
+  tag="特惠"
+  price="{{item.price}}"
+  thumb="{{ item.mainImage }}"
+  thumb-class="goods-card-image"
+  title-class="goods-card-title"
+  id="{{item.id}}" 
+  bindtap="onClick">
+  <view slot="price-top">
+    <text class="goods-card-price-top">附近{{item.sales}}人已下单</text>
+    </view>
+  </van-card>
   <!-- 秒杀专区模块 -->
   <view class="footer">
     <text>- 已经到底了 -</text>
