--- a/app/pages/browse/browse.wxss
+++ b/app/pages/browse/browse.wxss
@@ -1,10 +1,13 @@
-/* pages/footmark/footmark.wxss */
+/* pages/browsing_history/index.wxss */
 page{
   background-color: #F2F2F2;
 }
-.card{
+.grid-card{
   margin: 3% 3% 0% 3%;
-  border-radius: 6px;
+  border-radius: 8px;
+}
+.value-class {
+  flex: none !important;
 }
 .view-bottom{
   width: 100%;
