--- a/app/pages/main/cart/cart.wxml
+++ b/app/pages/main/cart/cart.wxml
@@ -8,7 +8,7 @@
 />
   <van-swipe-cell wx:for="{{ cartItem }}" wx:key="{{ item.id }}" right-width="{{ 65 }}">
     <van-card bindtap="onClick" id="{{ item.id }}" custom-class="goods-card" name="{{ item.id }}"
-      title="{{ item.title }}" num="1" price="{{ item.price }}" thumb="{{ item.imageUrl }}" />
+      title="{{ item.title }}" num="{{item.count}}" price="{{ item.price }}" thumb="{{ item.mainImage }}" />
     <view slot="right" id="{{ item.id }}" bindtap="onClickDelete">删除</view>
   </van-swipe-cell>
   <van-submit-bar wx:if="{{ submitBarShow }}" custom-class="submit-bar" price="{{ totalPrice }}" button-text="提交订单" bind:submit="onClickButton" tip="{{ true }}" bindtap="submitOrder" />
