--- a/app/pages/main/classify/classify.wxml
+++ b/app/pages/main/classify/classify.wxml
@@ -1,12 +1,27 @@
 <!--pages/tabbar/classify/classify.wxml-->
 <van-search value="{{ value }}" placeholder="请输入搜索关键词" />
-<van-grid border="{{false}}" square="{{true}}" custom-class="grid-service" column-num="4">
-  <van-grid-item icon="/images/huawei.png" bind:click="sorry" text="华为手机" />
-  <van-grid-item icon="/images/xiaomi.png" bind:click="sorry" text="小米手机" />
-  <van-grid-item icon="/images/apple.png" bind:click="sorry" text="苹果手机" />
-  <van-grid-item icon="/images/oppo.png" bind:click="sorry" text="OPPO手机" />
-  <van-grid-item icon="/images/vivo.png" bind:click="sorry" text="VIVO手机" />
-  <van-grid-item icon="/images/sanxing.png" bind:click="sorry" text="三星手机" />
-  <van-grid-item icon="/images/meizu.png" bind:click="sorry" text="魅族手机" />
-  <van-grid-item icon="/images/honor.png" bind:click="sorry" text="荣耀手机" />
-</van-grid>
+<van-tree-select
+  items="{{ items }}"
+  height="1000rpx"
+  main-active-index="{{ mainActiveIndex }}"
+  active-id="{{ activeId }}"
+  bind:click-nav="onClickNav"
+  bind:click-item="onClickItem"
+>
+  <van-card
+    wx:for="{{product}}"
+    wx:key="{{item.id}}"
+    id="{{item.id}}"
+    price="{{item.price}}"
+    desc="{{item.description}}"
+    title="{{item.title}}"
+    thumb="{{item.mainImage}}"
+    slot="content"
+    custom-class="goods-card"
+    title-class="goods-title"
+    price-class="goods-price"
+  />
+  <view wx:if="{{product == []}}" style="width: 560rpx;background-color: aquamarine;height: 200px;" slot="content">
+    <van-empty description="描述文字" />
+  </view>
+  </van-tree-select>
