--- a/app/pages/main/home/home.wxss
+++ b/app/pages/main/home/home.wxss
@@ -2,38 +2,51 @@
 page{
   background-color: #F2F2F2;
 }
-.cell-top-space{
-  margin-top: 10px;
+.swiper{
+  height: 130px;
+  padding-bottom: 10px;
+  background-color: white;
 }
-.cell-title{
-  font-weight: 500;
-  font-size: 32rpx;
+.swiper-image{
+  margin: 2% 3%;
 }
-.view-card-title{
-  display: block;
-  font-size: 28rpx;
-  padding: 3%;
-  color: rgb(26, 25, 25);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  line-height: 25px;    
-  max-height: 25px;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
+.grid{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-.view-card-price{
-  display: block;
-  font-size: 32rpx;
-  color: red;
+.grid-item-text{
+  padding-top: 5px;
 }
-.price-char{
-  font-size: 12px;
+.van-card{
+  margin: 2% 3% 0 3% !important;
+  background-color: white !important;
+  border-radius: 6px !important;
+}
+.van-card__price{
+  font-size: 14px !important;
+}
+.van-card__price-integer{
+  font-size: 18px !important;
+}
+.goods-card-title{
+  font-size: 30rpx;
+}
+.goods-card-price-top{
+  font-size: 22rpx;
+  color: rgb(105, 104, 104);
+}
+.goods-container-right{
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 0px 6px 6px 0px;
 }
 .footer{
   width: 100%;
   text-align: center;
-  padding: 6% 0% 30% 0%;
+  padding: 6% 0% 25% 0%;
   font-size: 10px;
   color: rgb(95, 95, 97);
 }
