--- a/app/pages/main/mine/mine.wxml
+++ b/app/pages/main/mine/mine.wxml
@@ -1,42 +1,33 @@
 <!--pages/tabbar/mine/mine.wxml-->
 <view>
   <!-- 用户信息模块 -->
-  <view class="view-user">
+  <view class="user-info">
     <view class="avatar">
-      <van-image round width="4rem" height="4rem" src="{{avatarUrl}}" />
+      <van-image round width="2.8rem" height="2.8rem" src="{{avatarUrl}}" />
     </view>
-    <view class="info">
-      <text class="nickname">{{nickName}}</text>
-      <text class="number">ID：2400089</text>
-    </view>
+    <view class="nickname"><text>{{nickName}}</text></view>
   </view>
-  <!-- 功能服务模块 -->
-  <!-- <view class="view-service">
-    <van-cell-group inset>
-  <van-cell icon="orders-o" title="订单" is-link/>
-  <van-cell icon="browsing-history-o" title="足迹" is-link/>
-  <van-cell icon="goods-collect-o" title="收藏" is-link/>
-  <van-cell icon="location-o" title="收货地址" is-link/>
-  <van-cell icon="service-o" title="客服" is-link/>
-  <van-cell icon="setting-o" title="设置" is-link/>
-  <van-cell icon="warning-o" title="关于商城" is-link/>
-</van-cell-group>
-  </view> -->
-  <van-grid custom-class="grid-order" border="{{false}}" square="{{true}}" column-num="5">
-    <van-cell title="我的订单" border="{{false}}" />
-    <van-grid-item icon="pending-payment" url="/pages/order/order?id=0" text="待付款" />
-    <van-grid-item icon="send-gift-o" url="/pages/order/order?id=1" text="待发货" />
-    <van-grid-item icon="logistics" url="/pages/order/order?id=2" text="待收货" />
-    <van-grid-item icon="chat-o" url="/pages/order/order?id=3" text="待评价" />
-    <van-grid-item icon="after-sale" url="/pages/order/order?id=4" text="退款/售后" />
-  </van-grid>
+  <!-- 用户订单模块 -->
+  <van-grid border="{{false}}" square="{{true}}" column-num="4" custom-class="mine-order">
+      <van-cell title="我的订单" border="{{false}}" value="全部订单" title-class="cell-title" value-class="cell-value" >
+        <van-icon slot="right-icon" size="13px" color="#969799" name="arrow" class="custom-icon" />
+      </van-cell>
+      <van-grid-item icon="pending-payment" url="/pages/order/order?id=0" text="待付款" />
+      <van-grid-item icon="send-gift-o" url="/pages/order/order?id=1" text="待发货" />
+      <van-grid-item icon="logistics" url="/pages/order/order?id=2" text="配送中" />
+      <van-grid-item icon="sign" url="/pages/order/order?id=3" text="待收货" />
+
+    </van-grid>
   <!-- 服务模块 -->
-  <van-grid border="{{false}}" square="{{true}}" custom-class="grid-service" column-num="5">
-    <van-cell title="我的服务" border="{{false}}" />
-    <van-grid-item icon="/images/record.png" url="/pages/footmark/footmark" text="足迹" />
-    <van-grid-item icon="/images/star.png" url="/pages/collection/collection" text="收藏" />
-    <van-grid-item icon="/images/address.png" url="/pages/address/list/list" text="收货地址" />
-    <van-grid-item icon="/images/help.png" bind:click="sorry" text="客服" />
-    <van-grid-item icon="/images/about.png" bind:click="sorry" text="关于商城" />
+  <van-grid border="{{false}}" square="{{true}}" column-num="4" custom-class="grid">
+    <van-cell title="我的服务" title-class="cell-title" border="{{false}}" />
+    <van-grid-item icon="browsing-history-o" url="/pages/browse/browse" text="浏览记录" />
+    <van-grid-item icon="like-o" url="/pages/collection/collection" text="我的收藏" />
+    <van-grid-item icon="location-o" url="/pages/address/list/list" text="收货地址" />
+    <van-grid-item icon="service-o" bind:click="sorry" text="我的客服" />
+    <van-grid-item icon="question-o" bind:click="sorry" text="问题反馈" />
+    <van-grid-item icon="setting-o" bind:click="sorry" text="账号设置" />
+    <van-grid-item icon="shop-o" bind:click="sorry" text="关于商城" />
+    <van-grid-item />
   </van-grid>
 </view>
